cmf sandbox is now more inline with symfony-standard, uses the sensio generator bootstrap files, added missing packages that allows users to create bundles, added new sf2 deps checker (ie. php version number)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,6 +26,8 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
+    # bundles: [ ] # if enabled, every bundle must be added
+    #java: /usr/bin/java
     filters:
         cssrewrite: ~
         coffee:
@@ -36,6 +38,14 @@ assetic:
         #     jar: %kernel.root_dir%/java/compiler.jar
         # yui_css:
         #     jar: %kernel.root_dir%/java/yuicompressor-2.4.2.jar
+
+# Swiftmailer Configuration
+swiftmailer:
+    transport: %mailer_transport%
+    host:      %mailer_host%
+    username:  %mailer_user%
+    password:  %mailer_password%
+    spool:     { type: memory }
 
 # for jackalope-doctrine-dbal
 doctrine:
