install assets with symlink instead of copying to ease developpment

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
     },
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "symfony-assets-install": "symlink"
     }
 }
