--- a/src/Sandbox/MainBundle/Resources/config/services.yml
+++ b/src/Sandbox/MainBundle/Resources/config/services.yml
@@ -8,7 +8,7 @@ services:
         class: Sandbox\MainBundle\Controller\ImageController
         factory_service: doctrine_phpcr.odm.document_manager
         arguments:
-            container: "@service_container"
+            - @service_container
             - @doctrine_phpcr.odm.document_manager
             - @fos_rest.view_handler
 
