updating to latest vendors and adjusting config

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,15 +7,13 @@ framework:
     #esi:             ~
     translator:      { fallback: en }
     secret:          %secret%
-    charset:         UTF-8
     router:          { resource: "%kernel.root_dir%/config/routing.yml" }
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
-    default_locale: %locale%
-    session:
-        auto_start:     true
+    default_locale:  %locale%
+    session:         ~
 
 # Twig Configuration
 twig:
