--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "jms/di-extra-bundle": "1.0.*",
         "symfony-cmf/symfony-cmf": "1.0.*",
         "symfony-cmf/simple-cms-bundle": "1.0.*",
+        "symfony-cmf/search-bundle": "dev-master",
         "jackalope/jackalope-jackrabbit": "1.0.*",
         "doctrine/doctrine-bundle": "dev-master",
         "doctrine/data-fixtures": "dev-master",
