--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -163,7 +163,6 @@ sonata_doctrine_phpcr_admin:
                 - Symfony\Cmf\Bundle\MenuItem\Document\MenuItem
                 - Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangMenuItem
 
-
 fos_js_routing:
     routes_to_expose:
         - admin_sandbox_main_editablestaticcontent_create
@@ -192,9 +191,10 @@ fos_js_routing:
         - sonata.admin.doctrine_phpcr.phpcrodm_children
         - sonata.admin.doctrine_phpcr.phpcrodm_move
 
-fos_rest:
-    view:
-        view_response_listener: false
+sensio_framework_extra:
+    view:    { annotations: false }
+    router:  { annotations: true }
+    request: { converters: true }
 
 liip_search:
     restrict_by_language: true;
