--- a/src/Sandbox/AdminBundle/Resources/config/services.yml
+++ b/src/Sandbox/AdminBundle/Resources/config/services.yml
@@ -27,11 +27,11 @@ services:
         class: Sandbox\AdminBundle\Controller\RouteAdminController
         calls:
             - [ setContainer, [@service_container] ]
-    sandbox.admin.admin.static_editable_content:
+    sandbox.admin.admin.multilang_static_content:
         class: Sandbox\AdminBundle\Admin\ContentAdmin
         tags:
             - {name: sonata.admin, manager_type: doctrine_phpcr, group: phpcr, label: content}
-        arguments: ["",Sandbox\MainBundle\Document\EditableStaticContent, "sandbox_admin.content_controller"]
+        arguments: ["", Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent, "sandbox_admin.content_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
     sandbox.admin.admin.multilang_menu_item:
