--- a/src/Sandbox/AdminBundle/Resources/config/services.yml
+++ b/src/Sandbox/AdminBundle/Resources/config/services.yml
@@ -34,6 +34,8 @@ services:
         arguments: ["",Sandbox\MainBundle\Document\EditableStaticContent, "sandbox_admin.content_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
+            # TODO: can we not hardcode this?
+            - [ setContentRoot, [ "/cms/content" ] ]
     sandbox.admin.admin.multilang_menu_item:
         class: Sandbox\AdminBundle\Admin\MultilangMenuItemAdmin
         tags:
@@ -55,6 +57,8 @@ services:
         arguments: ["",Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent, "sandbox_admin.multilang_static_content_controller"]
         calls:
             - [ setRouteBuilder, [ @sonata.admin.route.path_info_slashes ] ]
+            # TODO: can we not hardcode this?
+            - [ setContentRoot, [ "/cms/content" ] ]
     sandbox.admin.admin.route:
         class: Sandbox\AdminBundle\Admin\RouteAdmin
         tags:
