--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -30,12 +30,12 @@ Vagrant::Config.run do |config|
 
   # chef solo configuration
   config.vm.provision :chef_solo do |chef|
-    chef.cookbooks_path = "cookbooks"
+    chef.cookbooks_path = "./"
     # chef debug level, start vagrant like this to debug:
     # $ CHEF_LOG_LEVEL=debug vagrant <provision or up>
-    chef.log_level = ENV['CHEF_LOG_LEVEL'] || "info"
+    chef.log_level = ENV['CHEF_LOG'] || "info"
 
     # chef recipes
-    chef.add_recipe("local")
+    chef.add_recipe("cookbook")
   end
 end
