--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -19,6 +19,10 @@ _sonata_admin:
     type: sonata_admin
     prefix: /admin
 
+admin_browser:
+    resource: '@SymfonyCmfPHPCRBrowserBundle/Resources/config/routing_browser.xml'
+    prefix: /admin/browser
+
 fos_js_routing:
     resource: @FOSJsRoutingBundle/Resources/config/routing/routing.xml
 
