--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant::Config.run do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "precise32"
   config.vm.host_name = "cmfsandbox"
-  config.vm.customize ["modifyvm", :id, "--memory", 768]
+  config.vm.customize ["modifyvm", :id, "--memory", "768"]
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
