--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,8 +7,7 @@ home_redirect:
     pattern: /
     defaults:
         _controller: lunetics_locale.switcher_controller:switchAction
-        _locale: %locale%
-        route: cmf_routing_dynamic_route_cms_routes_%locale%
+        route: cmf_routing_dynamic_route_cms_routes_en
         statusCode: 301
 
 admin_dashboard:
