aligned namespace name with Symfony2 conventions

--- a/src/Sandbox/MainBundle/Resources/config/services.yml
+++ b/src/Sandbox/MainBundle/Resources/config/services.yml
@@ -5,7 +5,7 @@ services:
             - [ setContainer, [@service_container] ]
 
     sandbox_main.debugListener:
-        class: Sandbox\MainBundle\Listener\SandboxExceptionListener
+        class: Sandbox\MainBundle\EventListener\SandboxExceptionListener
         calls:
             - [ setContainer, [@service_container] ]
         tags:
