--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,7 +95,7 @@ symfony_cmf_routing_extra:
             Sandbox\MainBundle\Document\DemoClassContent: sandbox_main.controller:classAction
             Symfony\Cmf\Bundle\RoutingExtraBundle\Document\RedirectRoute:  symfony_cmf_routing_extra.redirect_controller:redirectAction
         templates_by_class:
-            Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent: SandboxMainBundle:MultilangStaticContent:index.html.twig
+            Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent: SandboxMainBundle:MultilangStaticContent:index.html.twig
 
 symfony_cmf_simple_cms:
     routing:
@@ -108,11 +108,19 @@ knp_menu:
 symfony_cmf_create:
     phpcr_odm: true
     map:
-        'http://rdfs.org/sioc/ns#Post': 'Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent'
+        'http://rdfs.org/sioc/ns#Post': 'Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent'
     use_coffee: %liip_vie.use_coffee%
     image:
         model_class: Symfony\Cmf\Bundle\CreateBundle\Document\Image
         controller_class: Symfony\Cmf\Bundle\CreateBundle\Controller\PHPCRImageController
+
+symfony_cmf_content:
+    multilang:
+      locales: %locales%
+
+symfony_cmf_menu:
+    multilang:
+      locales: %locales%
 
 sonata_block:
     default_contexts: [cms]
@@ -137,7 +145,7 @@ sonata_admin:
             content:
                 label: page content
                 items:
-                    - symfony_cmf_multilang_content.static_content_admin
+                    - symfony_cmf_content.multilang.admin
             routing:
                 label: page routes
                 items:
@@ -146,7 +154,7 @@ sonata_admin:
                 label: menu structure
                 items:
                     - symfony_cmf_menu.admin
-                    - symfony_cmf_multilang_content.menu_item_admin
+                    - symfony_cmf_menu.multilang.admin
             simplecms:
                 label: simple cms (content/routing/menu as one)
                 items:
@@ -157,7 +165,7 @@ sonata_doctrine_phpcr_admin:
         Doctrine\PHPCR\Odm\Document\Generic:
             valid_children:
                 - all
-        Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangStaticContent: ~
+        Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent: ~
         Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page: ~
         Symfony\Cmf\Bundle\RoutingExtraBundle\Document\Route:
             valid_children:
@@ -168,11 +176,11 @@ sonata_doctrine_phpcr_admin:
         Symfony\Cmf\Bundle\MenuItem\Document\MenuItem:
             valid_children:
                 - Symfony\Cmf\Bundle\MenuItem\Document\MenuItem
-                - Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangMenuItem
-        Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangMenuItem:
+                - Symfony\Cmf\Bundle\ContentBundle\Document\MultilangMenuItem
+        Symfony\Cmf\Bundle\ContentBundle\Document\MultilangMenuItem:
             valid_children:
                 - Symfony\Cmf\Bundle\MenuItem\Document\MenuItem
-                - Symfony\Cmf\Bundle\MultilangContentBundle\Document\MultilangMenuItem
+                - Symfony\Cmf\Bundle\ContentBundle\Document\MultilangMenuItem
 
 fos_js_routing:
     routes_to_expose:
