explain how to add caching (fixes #125)

--- a/app/config/phpcr_doctrine_dbal.yml.dist
+++ b/app/config/phpcr_doctrine_dbal.yml.dist
@@ -2,6 +2,9 @@ parameters:
     phpcr_backend:
         type: doctrinedbal
         connection: doctrine.dbal.default_connection
+#        caches:
+#            meta: liip_doctrine_cache.ns.meta
+#            nodes: liip_doctrine_cache.ns.nodes
     phpcr_workspace: default
     phpcr_user: admin
     phpcr_pass: admin
