--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -219,3 +219,11 @@ lunetics_locale:
         - router
         - browser
     allowed_locales: %locales%
+
+# jackalope doctrine caching
+liip_doctrine_cache:
+    namespaces:
+        meta:
+            type: file_system
+        nodes:
+            type: file_system
