--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,7 +7,7 @@ home_redirect:
     pattern: /
     defaults:
         _controller: lunetics_locale.switcher_controller:switchAction
-        route: cmf_routing_dynamic_route_cms_routes_en
+        route: /cms/routes/en
         statusCode: 301
         useReferrer: false
 
