--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,12 +104,15 @@ symfony_cmf_simple_cms:
             Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page:  SymfonyCmfSimpleCmsBundle:Page:index.html.twig
 
 knp_menu:
-    twig: true
+    twig:
+        template: SandboxMainBundle:Menu:my_menu.html.twig
 
 symfony_cmf_create:
     phpcr_odm: true
     map:
         'http://rdfs.org/sioc/ns#Post': 'Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent'
+        'http://cmf.symfony.com/MenuItem': 'Symfony\Cmf\Bundle\MenuBundle\Document\MenuItem'
+
     use_coffee: %liip_vie.use_coffee%
     image:
         model_class: Symfony\Cmf\Bundle\CreateBundle\Document\Image
