--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,12 @@
         "liip/functional-test-bundle": "dev-master",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
         "lunetics/locale-bundle": "dev-master",
-        "symfony-cmf/tree-browser-bundle":"1.0.*"
+        "symfony-cmf/tree-browser-bundle":"1.0.*",
+        "jackalope/jackalope-doctrine-dbal": "dev-master",
+        "doctrine/phpcr-bundle": "1.0.*",
+        "doctrine/phpcr-odm": "1.0.*"
     },
     "suggest": {
-        "jackalope/jackalope-doctrine-dbal": "dev-master",
         "midgard/phpcr": "dev-master"
     },
     "scripts": {
