finalize the RSS feed for the news list

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -248,3 +248,13 @@ lunetics_locale:
 #            type: file_system
 #        nodes:
 #            type: file_system
+
+fos_rest:
+    view:
+        formats:
+            rss: true
+        templating_formats:
+            rss: true
+            html: true
+        mime_types:
+            rss: 'application/rss+xml'
