get the created entity subject in JS

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -253,6 +253,7 @@ fos_rest:
     view:
         formats:
             rss: true
+            json: true
         templating_formats:
             rss: true
             html: true
