--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -147,6 +147,10 @@ sonata_admin:
                 label: page content
                 items:
                     - symfony_cmf_content.multilang.admin
+                    - symfony_cmf_block.simple_admin
+                    - symfony_cmf_block.container_admin
+                    - symfony_cmf_block.reference_admin
+                    - symfony_cmf_block.action_admin
             routing:
                 label: page routes
                 items:
@@ -166,7 +170,24 @@ sonata_doctrine_phpcr_admin:
         Doctrine\PHPCR\Odm\Document\Generic:
             valid_children:
                 - all
-        Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent: ~
+        Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent:
+            valid_children:
+                - Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ReferenceBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
+        Symfony\Cmf\Bundle\BlockBundle\Document\ReferenceBlock:
+            valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock:
+            valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock:
+            valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock:
+            valid_children:
+                - Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ReferenceBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
         Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page: ~
         Symfony\Cmf\Bundle\RoutingExtraBundle\Document\Route:
             valid_children:
@@ -194,6 +215,18 @@ fos_js_routing:
         - admin_bundle_content_multilangstaticcontent_create
         - admin_bundle_content_multilangstaticcontent_delete
         - admin_bundle_content_multilangstaticcontent_edit
+        - admin_bundle_block_simpleblock_create
+        - admin_bundle_block_simpleblock_delete
+        - admin_bundle_block_simpleblock_edit
+        - admin_bundle_block_containerblock_create
+        - admin_bundle_block_containerblock_delete
+        - admin_bundle_block_containerblock_edit
+        - admin_bundle_block_referenceblock_create
+        - admin_bundle_block_referenceblock_delete
+        - admin_bundle_block_referenceblock_edit
+        - admin_bundle_block_actionblock_create
+        - admin_bundle_block_actionblock_delete
+        - admin_bundle_block_actionblock_edit
         - admin_bundle_routingextra_route_create
         - admin_bundle_routingextra_route_delete
         - admin_bundle_routingextra_route_edit
