--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,8 +11,15 @@ home_redirect:
         statusCode: 301
         useReferrer: false
 
-admin_dashboard:
+admin_dashboard_wo_locale:
     pattern: /admin/
+    defaults:
+        _controller: FrameworkBundle:Redirect:redirect
+        route: sonata_admin_dashboard
+        permanent: true # this for 301
+
+admin_dashboard:
+    pattern: /{_locale}/admin/
     defaults:
         _controller: FrameworkBundle:Redirect:redirect
         route: sonata_admin_dashboard
@@ -20,12 +27,12 @@ admin_dashboard:
 
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
-    prefix: /admin
+    prefix: /{_locale}/admin
 
 _sonata_admin:
     resource: .
     type: sonata_admin
-    prefix: /admin
+    prefix: /{_locale}/admin
 
 fos_js_routing:
     resource: @FOSJsRoutingBundle/Resources/config/routing/routing.xml
