--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,8 +11,15 @@ home_redirect:
         statusCode: 301
         useReferrer: false
 
+admin_wo_locale:
+    pattern: /admin
+    defaults:
+        _controller: FrameworkBundle:Redirect:redirect
+        route: sonata_admin_dashboard
+        permanent: true # this for 301
+
 admin_dashboard_wo_locale:
-    pattern: /admin/
+    pattern: /admin/dashboard
     defaults:
         _controller: FrameworkBundle:Redirect:redirect
         route: sonata_admin_dashboard
