--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,8 @@ script: phpunit -c app
 notifications:
   irc: "irc.freenode.org#symfony-cmf"
   email: "symfony-cmf-devs@googlegroups.com"
+
+matrix:
+  allow_failures:
+    - env: TRANSPORT=midgard_sqlite
+    - env: TRANSPORT=midgard_mysql
