--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,7 +118,7 @@ symfony_cmf_create:
         'http://cmf.symfony.com/MenuItem': 'Symfony\Cmf\Bundle\MenuBundle\Document\MenuItem'
         'http://schema.org/NewsArticle': 'Sandbox\MainBundle\Document\NewsArticle'
         'http://schema.org/CollectionPage': 'Sandbox\MainBundle\Document\CollectionPage'
-        'http://cmf.symfony.com/CmfRoute': 'Sandbox\MainBundle\Document\CmfRoute'
+        'http://cmf.symfony.com/CmfRoute': 'Symfony\Cmf\Bundle\CreateBundle\Document\CmfRoute'
 
     use_coffee: %liip_vie.use_coffee%
     image:
